utblang/compiler/fukushuu/fukushuuParser.py
# Generated from C:/Users/jesusdaniel/PycharmProjects/fukushuu/utblang/compiler/fukushuu\fukushuu.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class fukushuuParser ( Parser ):

    grammarFileName = "fukushuu.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'a'", "'('", "','", "')'", "'en'", "'en_rango_de'", 
                     "'hasta'", "'x'", "'booleano'", "'cadena'", "'leer'", 
                     "<INVALID>", "'<-'", "'agregar_a'", "'%'", "'es_igual_que'", 
                     "'es_mayor_que'", "'es_menor_que'", "'es_mayor_o_igual_que'", 
                     "'es_menor_o_igual_que'", "'no_es_igual_a'", "'y'", 
                     "'o'", "'no'", "'convertir_a'", "'para_cada'", "'fin_para'", 
                     "':'", "'mientras'", "'fin_mientras'", "'si'", "'entonces'", 
                     "'fin_si'", "'sino'", "'de_tamano'", "'nombre'", "'lista_de_entero'", 
                     "'lista_de_real'", "'lista_de_booleano'", "'lista_de_cadena'", 
                     "'matriz_de_entero'", "'matriz_de_real'", "'matriz_de_cadena'", 
                     "'matriz_de_booleano'", "<INVALID>", "'en_la_posicion'", 
                     "'en_la_coordenada'", "'por'", "'cambiar_valor_a'", 
                     "'nombre_programa'", "'+'", "'-'", "'*'", "'/'", "'='", 
                     "'real'", "'entero'", "'tipo'", "'mostrar_en_pantalla'", 
                     "'variables'", "'fin_variables'", "'flujo'", "'fin_flujo'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TBOOLEANO", "TCADENA", "LEER", "COMENTARIOS", 
                      "AGREGAR_LISTA_OP", "AGREGAR_A", "MODULO", "IGUAL_QUE", 
                      "MAYOR_QUE", "MENOR_QUE", "MAYOR_IGUAL_QUE", "MENOR_IGUAL_QUE", 
                      "DESIGUALDAD", "YLOGICO", "OLOGICO", "NEGACION", "CONVERSION", 
                      "PARA", "FINPARA", "DPUNTOS", "MIENTRAS", "FINMIENTRAS", 
                      "SI", "ENTONCES", "FINSI", "SINO", "TAMANO", "NOMBRE", 
                      "LISTA_ENTERO", "LISTA_REAL", "LISTA_BOOL", "LISTA_CADENA", 
                      "MATRIZ_ENTERO", "MATRIZ_REAL", "MATRIZ_CADENA", "MATRIZ_BOOL", 
                      "BOOL", "EN_LA_POSICION", "EN_LA_COORDENADA", "POR", 
                      "CAMBIAR_VALOR_A", "NOMBRE_PROGRAMA", "SUM", "RES", 
                      "MUL", "DIV", "IGUAL", "TREAL", "TENTERO", "TIPO", 
                      "MOSTRAR", "INICIO_VARIABLES", "FIN_VARIABLES", "INICIO_FLUJO", 
                      "FIN_FLUJO", "INT", "ID_PROGRAMA", "ID", "FLOAT", 
                      "WS", "STRING" ]

    RULE_operaciones = 0
    RULE_opAnd = 1
    RULE_igualdad = 2
    RULE_desigualdad = 3
    RULE_sumr = 4
    RULE_op_div = 5
    RULE_conversion = 6
    RULE_obtenerValor = 7
    RULE_atom = 8
    RULE_mostrar = 9
    RULE_asignacionLista = 10
    RULE_asignacionMatriz = 11
    RULE_asignacionID = 12
    RULE_asignacion = 13
    RULE_para_cada_elemento = 14
    RULE_agregar_elemento_lista = 15
    RULE_leer = 16
    RULE_comandos = 17
    RULE_sinotonces = 18
    RULE_dummy_comandos = 19
    RULE_si = 20
    RULE_mientras = 21
    RULE_flujo = 22
    RULE_declaracion = 23
    RULE_variables = 24
    RULE_nombrePrograma = 25
    RULE_inicio = 26
    RULE_start_rule = 27

    ruleNames =  [ "operaciones", "opAnd", "igualdad", "desigualdad", "sumr", 
                   "op_div", "conversion", "obtenerValor", "atom", "mostrar", 
                   "asignacionLista", "asignacionMatriz", "asignacionID", 
                   "asignacion", "para_cada_elemento", "agregar_elemento_lista", 
                   "leer", "comandos", "sinotonces", "dummy_comandos", "si", 
                   "mientras", "flujo", "declaracion", "variables", "nombrePrograma", 
                   "inicio", "start_rule" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    TBOOLEANO=9
    TCADENA=10
    LEER=11
    COMENTARIOS=12
    AGREGAR_LISTA_OP=13
    AGREGAR_A=14
    MODULO=15
    IGUAL_QUE=16
    MAYOR_QUE=17
    MENOR_QUE=18
    MAYOR_IGUAL_QUE=19
    MENOR_IGUAL_QUE=20
    DESIGUALDAD=21
    YLOGICO=22
    OLOGICO=23
    NEGACION=24
    CONVERSION=25
    PARA=26
    FINPARA=27
    DPUNTOS=28
    MIENTRAS=29
    FINMIENTRAS=30
    SI=31
    ENTONCES=32
    FINSI=33
    SINO=34
    TAMANO=35
    NOMBRE=36
    LISTA_ENTERO=37
    LISTA_REAL=38
    LISTA_BOOL=39
    LISTA_CADENA=40
    MATRIZ_ENTERO=41
    MATRIZ_REAL=42
    MATRIZ_CADENA=43
    MATRIZ_BOOL=44
    BOOL=45
    EN_LA_POSICION=46
    EN_LA_COORDENADA=47
    POR=48
    CAMBIAR_VALOR_A=49
    NOMBRE_PROGRAMA=50
    SUM=51
    RES=52
    MUL=53
    DIV=54
    IGUAL=55
    TREAL=56
    TENTERO=57
    TIPO=58
    MOSTRAR=59
    INICIO_VARIABLES=60
    FIN_VARIABLES=61
    INICIO_FLUJO=62
    FIN_FLUJO=63
    INT=64
    ID_PROGRAMA=65
    ID=66
    FLOAT=67
    WS=68
    STRING=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class OperacionesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a = None # OpAndContext
            self.operacion = None # Token
            self.b = None # OpAndContext

        def opAnd(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fukushuuParser.OpAndContext)
            else:
                return self.getTypedRuleContext(fukushuuParser.OpAndContext,i)


        def OLOGICO(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.OLOGICO)
            else:
                return self.getToken(fukushuuParser.OLOGICO, i)

        def getRuleIndex(self):
            return fukushuuParser.RULE_operaciones

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperaciones" ):
                return visitor.visitOperaciones(self)
            else:
                return visitor.visitChildren(self)




    def operaciones(self):

        localctx = fukushuuParser.OperacionesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_operaciones)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            localctx.a = self.opAnd()
            self.state = 61
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 57
                    localctx.operacion = self.match(fukushuuParser.OLOGICO)
                    self.state = 58
                    localctx.b = self.opAnd() 
                self.state = 63
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OpAndContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a = None # IgualdadContext
            self.operacion = None # Token
            self.b = None # IgualdadContext

        def igualdad(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fukushuuParser.IgualdadContext)
            else:
                return self.getTypedRuleContext(fukushuuParser.IgualdadContext,i)


        def YLOGICO(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.YLOGICO)
            else:
                return self.getToken(fukushuuParser.YLOGICO, i)

        def getRuleIndex(self):
            return fukushuuParser.RULE_opAnd

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpAnd" ):
                return visitor.visitOpAnd(self)
            else:
                return visitor.visitChildren(self)




    def opAnd(self):

        localctx = fukushuuParser.OpAndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_opAnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            localctx.a = self.igualdad()
            self.state = 69
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 65
                    localctx.operacion = self.match(fukushuuParser.YLOGICO)
                    self.state = 66
                    localctx.b = self.igualdad() 
                self.state = 71
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IgualdadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a = None # DesigualdadContext
            self.operacion = None # Token
            self.b = None # DesigualdadContext

        def desigualdad(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fukushuuParser.DesigualdadContext)
            else:
                return self.getTypedRuleContext(fukushuuParser.DesigualdadContext,i)


        def IGUAL_QUE(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.IGUAL_QUE)
            else:
                return self.getToken(fukushuuParser.IGUAL_QUE, i)

        def DESIGUALDAD(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.DESIGUALDAD)
            else:
                return self.getToken(fukushuuParser.DESIGUALDAD, i)

        def getRuleIndex(self):
            return fukushuuParser.RULE_igualdad

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIgualdad" ):
                return visitor.visitIgualdad(self)
            else:
                return visitor.visitChildren(self)




    def igualdad(self):

        localctx = fukushuuParser.IgualdadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_igualdad)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            localctx.a = self.desigualdad()
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 73
                    localctx.operacion = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==fukushuuParser.IGUAL_QUE or _la==fukushuuParser.DESIGUALDAD):
                        localctx.operacion = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 74
                    localctx.b = self.desigualdad() 
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DesigualdadContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a = None # SumrContext
            self.operacion = None # Token
            self.b = None # SumrContext

        def sumr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fukushuuParser.SumrContext)
            else:
                return self.getTypedRuleContext(fukushuuParser.SumrContext,i)


        def MENOR_QUE(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.MENOR_QUE)
            else:
                return self.getToken(fukushuuParser.MENOR_QUE, i)

        def MENOR_IGUAL_QUE(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.MENOR_IGUAL_QUE)
            else:
                return self.getToken(fukushuuParser.MENOR_IGUAL_QUE, i)

        def MAYOR_QUE(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.MAYOR_QUE)
            else:
                return self.getToken(fukushuuParser.MAYOR_QUE, i)

        def MAYOR_IGUAL_QUE(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.MAYOR_IGUAL_QUE)
            else:
                return self.getToken(fukushuuParser.MAYOR_IGUAL_QUE, i)

        def getRuleIndex(self):
            return fukushuuParser.RULE_desigualdad

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDesigualdad" ):
                return visitor.visitDesigualdad(self)
            else:
                return visitor.visitChildren(self)




    def desigualdad(self):

        localctx = fukushuuParser.DesigualdadContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_desigualdad)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            localctx.a = self.sumr()
            self.state = 85
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 81
                    localctx.operacion = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fukushuuParser.MAYOR_QUE) | (1 << fukushuuParser.MENOR_QUE) | (1 << fukushuuParser.MAYOR_IGUAL_QUE) | (1 << fukushuuParser.MENOR_IGUAL_QUE))) != 0)):
                        localctx.operacion = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 82
                    localctx.b = self.sumr() 
                self.state = 87
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SumrContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a = None # Op_divContext
            self.operacion = None # Token
            self.b = None # Op_divContext

        def op_div(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fukushuuParser.Op_divContext)
            else:
                return self.getTypedRuleContext(fukushuuParser.Op_divContext,i)


        def SUM(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.SUM)
            else:
                return self.getToken(fukushuuParser.SUM, i)

        def RES(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.RES)
            else:
                return self.getToken(fukushuuParser.RES, i)

        def getRuleIndex(self):
            return fukushuuParser.RULE_sumr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSumr" ):
                return visitor.visitSumr(self)
            else:
                return visitor.visitChildren(self)




    def sumr(self):

        localctx = fukushuuParser.SumrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sumr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            localctx.a = self.op_div()
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 89
                    localctx.operacion = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==fukushuuParser.SUM or _la==fukushuuParser.RES):
                        localctx.operacion = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 90
                    localctx.b = self.op_div() 
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Op_divContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.a = None # ConversionContext
            self.operacion = None # Token
            self.b = None # ConversionContext

        def conversion(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fukushuuParser.ConversionContext)
            else:
                return self.getTypedRuleContext(fukushuuParser.ConversionContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.MUL)
            else:
                return self.getToken(fukushuuParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.DIV)
            else:
                return self.getToken(fukushuuParser.DIV, i)

        def MODULO(self, i:int=None):
            if i is None:
                return self.getTokens(fukushuuParser.MODULO)
            else:
                return self.getToken(fukushuuParser.MODULO, i)

        def getRuleIndex(self):
            return fukushuuParser.RULE_op_div

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOp_div" ):
                return visitor.visitOp_div(self)
            else:
                return visitor.visitChildren(self)




    def op_div(self):

        localctx = fukushuuParser.Op_divContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_op_div)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            localctx.a = self.conversion()
            self.state = 101
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 97
                    localctx.operacion = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fukushuuParser.MODULO) | (1 << fukushuuParser.MUL) | (1 << fukushuuParser.DIV))) != 0)):
                        localctx.operacion = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 98
                    localctx.b = self.conversion() 
                self.state = 103
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConversionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.op = None # Token
            self.a = None # AtomContext
            self.m = None # Token

        def atom(self):
            return self.getTypedRuleContext(fukushuuParser.AtomContext,0)


        def NEGACION(self):
            return self.getToken(fukushuuParser.NEGACION, 0)

        def CONVERSION(self):
            return self.getToken(fukushuuParser.CONVERSION, 0)

        def TENTERO(self):
            return self.getToken(fukushuuParser.TENTERO, 0)

        def TREAL(self):
            return self.getToken(fukushuuParser.TREAL, 0)

        def TBOOLEANO(self):
            return self.getToken(fukushuuParser.TBOOLEANO, 0)

        def TCADENA(self):
            return self.getToken(fukushuuParser.TCADENA, 0)

        def getRuleIndex(self):
            return fukushuuParser.RULE_conversion

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConversion" ):
                return visitor.visitConversion(self)
            else:
                return visitor.visitChildren(self)




    def conversion(self):

        localctx = fukushuuParser.ConversionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_conversion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==fukushuuParser.NEGACION or _la==fukushuuParser.CONVERSION:
                self.state = 104
                localctx.op = self._input.LT(1)
                _la = self._input.LA(1)
                if not(_la==fukushuuParser.NEGACION or _la==fukushuuParser.CONVERSION):
                    localctx.op = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 107
            localctx.a = self.atom()
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 108
                self.match(fukushuuParser.T__0)
                self.state = 109
                localctx.m = self._input.LT(1)
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << fukushuuParser.TBOOLEANO) | (1 << fukushuuParser.TCADENA) | (1 << fukushuuParser.TREAL) | (1 << fukushuuParser.TENTERO))) != 0)):
                    localctx.m = self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ObtenerValorContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.id3 = None # Token
            self.id1 = None # Token
            self.indice = None # OperacionesContext
            self.id2 = None # Token
            self.fila = None # OperacionesContext
            self.columna = None # OperacionesContext

        def EN_LA_POSICION(self):
            return self.getToken(fukushuuParser.EN_LA_POSICION, 0)

        def EN_LA_COORDENADA(self):
            return self.getToken(fukushuuParser.EN_LA_COORDENADA, 0)

        def ID(self):
            return self.getToken(fukushuuParser.ID, 0)

        def operaciones(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(fukushuuParser.OperacionesContext)
            else:
                return self.getTypedRuleContext(fukushuuParser.OperacionesContext,i)


        def getRuleIndex(self):
            return fukushuuParser.RULE_obtenerValor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitObtenerValor" ):
                return visitor.visitObtenerValor(self)
            else:
                return visitor.visitChildren(self)




    def obtenerValor(self):

        localctx = fukushuuParser.ObtenerValorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_obtenerValor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 112
                localctx.id3 = self.match(fukushuuParser.ID)
                pass

            elif la_ == 2:
                self.state = 113
                localctx.id1 = self.match(fukushuuParser.ID)
                self.state = 114
                self.match(fukushuuParser.EN_LA_POSICION)
                self.state = 115
                localctx.indice = self.operaciones()
                pass

            elif la_ == 3:
                self.state = 116
                localctx.id2 = self.match(fukushuuParser.ID)
                self.state = 117
                self.match(fukushuuParser.EN_LA_COORDENADA)
                self.state = 118
                self.match(fukushuuParser.T__1)
                self.state = 119
                localctx.fila = self.operaciones()
                self.state = 120
                self.match(fukushuuParser.T__2)
                self.state = 121
                localctx.columna = self.operaciones()
                self.state = 122
                self.match(fukushuuParser.T__3)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.r = None # Token
            self.i = None # Token
            self.f = None # Token
            self.var = None # ObtenerValorContext
            self.s = None # Token
            self.op = None # OperacionesContext
            self.b = None # Token

        def INT(self):
            return self.getToken(fukushuuParser.INT, 0)

        def FLOAT(self):
            return self.getToken(fukushuuParser.FLOAT, 0)

        def obtenerValor(self):
            return self.getTypedRuleContext(fukushuuParser.ObtenerValorContext,0)


        def STRING(self):
            return self.getToken(fukushuuParser.STRING, 0)

        def operaciones(self):
            return self.getTypedRuleContext(fukushuuParser.OperacionesContext,0)


        def BOOL(self):
            return self.getToken(fukushuuParser.BOOL, 0)

        def SUM(self):
            return self.getToken(fukushuuParser.SUM, 0)

        def RES(self):
            return self.getToken(fukushuuParser.RES, 0)

        def getRuleIndex(self):
            return fukushuuParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):
